--- a/myproject03/package.json
+++ b/myproject03/package.json
@@ -8,7 +8,9 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.22.0",
         "core-js": "^3.6.5",
+        "element-ui": "^2.15.6",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
@@ -24,5 +26,4 @@
         "eslint-plugin-vue": "^6.2.2",
         "vue-template-compiler": "^2.6.11"
     }
-
 }
